--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,84 @@
   font-size: large;
 }
 
+
+/* NAVBAR */
 .navbar{
-  height: 100px;
+  height: 85px;
   background-color: #006B38;
+  margin: 0;
+  padding: 0;
+  transition: all 0.3s ease;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .navLeft{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+.navbar .navLeft li img{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+
+  margin-top: 12px;
+  height: 50px;
+  border-radius: 50%;
+}
+.navbar .navRight{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  margin: 0 20px;
+}
+.navbar .navRight li{
+  cursor: pointer;
+  padding: 0 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar .navRight .avatar img{
+  margin-top: 12px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.navbar .navRight .avatar p{
+  margin: 0 0;
+  padding: 0 0;
+}
+
+
+.navbar .navRight li a{
+  color: white;
+}
+
+
+
+
+/* FOOTER */
+footer {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+}
+
+.footer-copyright{
+  font-size: 18px;
 }
 
 @keyframes App-logo-spin {
