--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html{
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  top:0;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+head{
+  margin: 0;
 }
