updated form thomas

--- a/src/components/HomeAsso/style.css
+++ b/src/components/HomeAsso/style.css
@@ -18,7 +18,7 @@ h2 {
 font-size: 50px;
 
 }
-.banner {
+#assos {
   height: 85vh;
   background-image: url("banner.jpg");
   background-size: cover;
