--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,24 @@
   justify-content: space-between;
   height: 100%;
 }
+
+.navbar .navLeft .logo{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  color: white;
+}
+
+.navbar .navLeft .logo p{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+  height: 100%;
+  margin: 0 0 0 0;
+  color: white;
+}
 .navbar .navLeft li img{
   display: flex;
   align-items: center;
