--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -18,7 +18,7 @@ h2 {
 font-size: 50px;
 
 }
-.banner {
+#casino {
   height: 85vh;
   background-image: url("bannerv.jpg");
   background-size: cover;
